<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Lesson2Activity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main" />

    <!--TO CHANGE THE COLOR OF THE IMAGE. PAY ATTENTION TO THE DIRECTORY OF THE TINT! ITEM IS: ANDROID:COLOR, NOT DRAWABLE-->
    <!--to version android below 5.0 to 4.0 add the string to the manifest and change xml with using hint alt+enter -->
    <!--android:src="@drawable/ic_android_black_35dp"-->
    <!--android:tint="@color/color_selector"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:scaleType="centerInside"
            android:src="@drawable/logo_large" />

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height_of_the_edit_text"
            android:layout_marginTop="20dp"
            android:background="@color/whiteBackgroundTransparent"
            android:drawableStart="@drawable/ic_input_name"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height_of_the_edit_text"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_input_password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/log_in"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height_of_the_button"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_button_selector"
            android:text="@string/logIn" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/create_account"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height_of_the_button"
            android:background="@color/orange"
            android:text="@string/createAccount" />

    </LinearLayout>


</FrameLayout>